compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_for_constant_list.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nconst numbers = [2, 4, 6, 8]\n"
---
const numbers = [2, 4, 6, 8]
                ↑▔▔▔▔▔▔▔▔▔▔▔


----- Hover content -----
Scalar(
    String(
        "```gleam\nList(Int)\n```",
    ),
)
