compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_for_constant_string_concatenation_side.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\nconst name = \"Bob\"\nconst message = \"Hello \" <> name\n"
---
const name = "Bob"
const message = "Hello " <> name
                            ↑▔▔▔


----- Hover content -----
Scalar(
    String(
        "```gleam\nString\n```",
    ),
)
