compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__hover__hover_function_definition_with_docs.snap
---
source: compiler-core/src/language_server/tests/hover.rs
expression: "\n/// Exciting documentation\n/// Maybe even multiple lines\nfn append(x, y) {\n  x <> y\n}\n"
---
/// Exciting documentation
/// Maybe even multiple lines
fn append(x, y) {
▔▔▔↑▔▔▔▔▔▔▔▔▔▔▔  
  x <> y
}


----- Hover content -----
Scalar(
    String(
        "```gleam\nfn(String, String) -> String\n```\n Exciting documentation\n Maybe even multiple lines\n",
    ),
)
